# CUDA-METRO

./: .gitignore  BQM_64_1024_25.npy  BQX_220_1024.npy  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  JOSS Paper.md  README.md  paper.md  placeholder.md  pyproject.toml  references.bib  requirements.pip  setup.py
CUDA-METRO, JOSS/: CUDA METRO.md
DiagramData/: Runs_4070Ti.npy  Timings_4070Ti.npy  cutter.py  timings.py
configs/: CRI3.json  bench.json  fig1.json  grid_bench.json  tc_config.json  test_config.json
cudametro.egg-info/: PKG-INFO  SOURCES.txt
docs/: Gemfile  _config.yml  index.md
inputs/: TCS.csv  TCS666.csv  TC_A-FePS3.csv  TC_CoI2.csv  TC_Cr2Ge2Te6.csv  TC_CrBr3.csv  TC_CrCl3.csv  TC_CrHf2N2TeO.csv  TC_CrI3.csv  TC_CrInSe3.csv  TC_CrInTe3.csv  TC_CrO2_P-4m2.csv  TC_CrPS4.csv  TC_CrPSe4.csv  TC_CrPTe4.csv  TC_CrSBr.csv  TC_CrSeBr.csv  TC_CrSeries.csv  TC_CrTa3N3IO.csv  TC_CrTaNFI.csv  TC_CrTe2.csv  TC_CrW3C3II.csv  TC_CrYNTeI.csv  TC_FePS3.csv  TC_Ge-CrSnTe3.csv  TC_GeCrI3.csv  TC_I-CrI3.csv  TC_I-CrOCl.csv  TC_I-Fe2Si.csv  TC_I-FeBr2.csv  TC_I-FeCl2.csv  TC_I-FeI2.csv  TC_MnBr2.csv  TC_MnHf2C2IF.csv  TC_MnHfNTeI.csv  TC_MnO2_P-4m2.csv  TC_MnSTe.csv  TC_MnSe2.csv  TC_MnSeTe.csv  TC_MnTa2N2OF.csv  (+14 more)
outputs/: placeholder
paperdata/: BLUE.txt  CrI3_comp.py  M_128.npy  M_256.npy  M_512.npy  M_64.npy  Step analysis_merged.pdf:Zone.Identifier  X_128.npy  X_256.npy  X_512.npy  X_64.npy  feps3.py  gausstheory.py  grid_0.010.npy  grid_0.100.npy  grid_0.647.npy  grid_0.892.npy  grid_0000.npy  grid_1.000.npy  grid_1.284.npy  grid_1.510.npy  grid_1.773.npy  (+436 more)
(+658 files in other folders)
