[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cuda-metro-line"
version = "0.0.1"
authors = [
  { name="Arkavo Hait", email="arkavohait@iisc.ac.in" },
  { name="Santanu Mahapatra", email="santanu@iisc.ac.in"}
]
description = "pyCUDA Metropolis Monte Carlo 2D Heisenberg Model Simulation"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/arkavo/CUDA-METRO"
Issues = "https://github.com/arkavo/CUDA-METRO/issues"