[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.setuptools.packages.find]
namespaces=false
[project]
name = "cudametro"
version = "1.2.5"
authors = [
  { name="Arkavo Hait", email="arkavohait@iisc.ac.in" },
  { name="Santanu Mahapatra", email="santanu@iisc.ac.in"}
]
description = "pyCUDA Metropolis Monte Carlo 2D Heisenberg Model Simulation"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
[project.urls]
Homepage = "https://github.com/arkavo/CUDA-METRO"
Issues = "https://github.com/arkavo/CUDA-METRO/issues"